@@ -50,6 +50,8 @@ void sc_gui_toolbar_update(void);
 
 void sc_gui_update_menu(void);
 
+void sc_gui_update_tooltip(void);
+
 void sc_gui_init(void);
 
 void sc_gui_free(void);
